Añadida página de perfil

--- a/app/views/clasificacion.ejs
+++ b/app/views/clasificacion.ejs
@@ -104,11 +104,11 @@
 
   <div class="container">
 
-         <div class="col-md-9" id="customer-orders">
+         <div class="col-md-9">
            <div class="heading">
                <h3 class="text-uppercase">Clasificación</h3>
            </div>
-           <p class="lead">En esta página podrás ver como va tu equipo en la liga</p>
+           <p class="lead">En esta página podrás ver cómo va tu equipo en la liga</p>
 
 
                           <p class="text-muted lead">Tabla de clasificación</p>
