--- a/app/views/tienda.ejs
+++ b/app/views/tienda.ejs
@@ -13,14 +13,68 @@
     <link href="css/animate.css" rel="stylesheet">
 
 
-
 </head>
 
 <body>
 
 <% include partials/cabecera %>
 <% include partials/barranav %>
+<% if ( tipo=="administrador" ) { %>
+  <div class="container">
+      <div class="row">
+        <div class="heading">
+            <h3 class="text-uppercase">Tienda</h3>
+        </div>
+      </div>
+      <p class="text-muted lead text-center">
+        Como administrador puede añadir y eliminar productos de la tienda.
+        </p>
+        <div class="row products text-center">
+          <a href="#" data-toggle="modal" data-target="#add-modal" class="btn btn-template-main"><i class="fa fa-plus"></i>Añadir producto</a>
+        </div> </br>
 
+        <div class="row products">
+          <% for(var i=0; i < data.length; i++) { %>
+
+
+            <div class="col-md-3 col-sm-4">
+                <div class="product">
+                    <div class="image">
+                        <a>
+                            <img src='img/<%=data[i].producto%>.jpg' alt="" class="img-responsive image1">
+                        </a>
+                    </div>
+                    <!-- /.image -->
+                    <div class="text">
+                        <h3><a href="shop-detail.html"><%=data[i].producto%></a></h3>
+                        <p class="price"><%=data[i].precio%> créditos</p>
+                    </div>
+                    <!-- /.text -->
+                    <% if ( nivel< data[i].nivel*100 ) { %>
+                    <div class="ribbon sale">
+                        <div class="theribbon">Nivel insuficiente</div>
+                        <div class="ribbon-background"></div>
+                    </div>
+                    <% }  else { %>
+
+                        <a href='/elimina/<%=data[i]._id%>' class="btn btn-template-main"><i class="fa fa-trash"></i>Eliminar</a>
+
+                        <% } %>
+
+                </div>
+                <!-- /.product -->
+            </div>
+            <% } %>
+
+      </div>
+    <!-- /.container -->
+
+</div>
+
+  <% }  %>
+
+
+  <% if ( tipo=="usuario" ) { %>
     <div class="container">
         <div class="row">
           <div class="heading">
@@ -72,6 +126,7 @@
     <!-- /.container -->
 
 </div>
+<% } %>
 
 <!-- /#content -->
 
@@ -90,6 +145,57 @@ _________________________________________________________ -->
         </div>
     </div>
 </div>
+
+<!-- *** AÑADIR MODAL ***
+_________________________________________________________ -->
+
+<div class="modal fade" id="add-modal" tabindex="-1" role="dialog" aria-labelledby="Add" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+          <form class="form-addproduct" action="/add" method="post">
+              <h2 class="form-signin-heading text-center">Añadir nuevo producto</h2>
+
+              <label for="producto" class="sr-only">Producto</label>
+              <input type="text" id="producto" name="producto" class="form-control" placeholder="Nombre producto" required autofocus>
+
+              <label for="precio" class="sr-only">Precio</label>
+              <input type="text" id="precio" name="precio" class="form-control" placeholder="Precio" required autofocus>
+
+              <label for="nivel" class="sr-only">Nivel</label>
+              <input type="text" id="nivel" name="nivel" class="form-control" placeholder="Nivel mínimo" required>
+
+              <button class="btn btn-lg btn-primary btn-block" type="submit">Añadir</button>
+            </form>
+
+        </div>
+    </div>
+</div>
+
+<!-- *** MODIFICA MODAL ***
+_________________________________________________________ -->
+
+<div class="modal fade" id="modify-modal" tabindex="-1" role="dialog" aria-labelledby="Modifica" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+          <form class="form-modificaproducto" action="/modifica" method="post">
+              <h2 class="form-signin-heading text-center">Añadir nuevo producto</h2>
+
+              <label for="producto" class="sr-only">Producto</label>
+              <input type="text" id="producto" name="producto" class="form-control" placeholder="Nombre producto" required autofocus>
+
+              <label for="precio" class="sr-only">Precio</label>
+              <input type="text" id="precio" name="precio" class="form-control" placeholder="Precio" required autofocus>
+
+              <label for="nivel" class="sr-only">Nivel</label>
+              <input type="text" id="nivel" name="nivel" class="form-control" placeholder="Nivel mínimo" required>
+
+              <button class="btn btn-lg btn-primary btn-block" type="submit">Añadir</button>
+            </form>
+
+        </div>
+    </div>
+</div>
+
 
 
 
