--- a/app/views/partials/cabecera.ejs
+++ b/app/views/partials/cabecera.ejs
@@ -10,7 +10,7 @@
                 </div>
                 <div class="col-xs-7">
 
-                    <% if ( tipo ) { %>
+                    <% if ( tipo || tipo==null ) { %>
 
 
                     <div class="login">
