--- a/app/views/partials/barranav.ejs
+++ b/app/views/partials/barranav.ejs
@@ -9,7 +9,7 @@
 
             <ul class="nav navbar-nav navbar-right">
               <li>
-                  <a href="/" >Perfil </a>
+                  <a href="/perfil" >Perfil </a>
               </li>
               <li>
                   <a href="/calendario" >Calendario</a>
