--- a/app/views/register.ejs
+++ b/app/views/register.ejs
@@ -20,8 +20,13 @@
             <label for="username" class="sr-only">Username</label>
             <input type="text" id="username" name="username" class="form-control" placeholder="Usuario" required autofocus>
 
-            <label for="name" class="sr-only">Name</label>
-            <input type="text" id="name" name="equipo" class="form-control" placeholder="Equipo" required autofocus>
+            <div class="form-group">
+            <select class="form-control" id="equipo" name="equipo">
+              <option value="Equipo1">Equipo1</option>
+              <option value="Equipo2">Equipo2</option>
+              <option value="Equipo3">Equipo3</option>
+            </select>
+            </div>
 
             <label for="email" class="sr-only">E-mail</label>
             <input type="email" id="email" name="email" class="form-control" placeholder="E-mail" required>
