--- a/app/views/tienda.ejs
+++ b/app/views/tienda.ejs
@@ -46,7 +46,7 @@
                     </div>
                     <!-- /.image -->
                     <div class="text">
-                        <h3><a href="shop-detail.html"><%=data[i].producto%></a></h3>
+                        <h3><a href="#"><%=data[i].producto%></a></h3>
                         <p class="price"><%=data[i].precio%> créditos</p>
                     </div>
                     <!-- /.text -->
